--- a/css/style.css
+++ b/css/style.css
@@ -183,18 +183,18 @@ PAGE: CONTACT
 
 
 .contact-info li.phone a{
-    background-image: url('../phone.png');
+    background-image: url('../img/phone.png');
     
 
 }
 
 .contact-info li.mail a{
-    background-image: url('../mail.png');
+    background-image: url('../img/mail.png');
 }
 
 
 .contact-info li.twitter a{
-    background-image: url('../twitter.png');
+    background-image: url('../img/twitter.png');
 }
 .main-contact {
     float: left;
